Fix container height, so that the sidebar is not cut off

--- a/client/reader/subscriptions/subscription-manager/styles.scss
+++ b/client/reader/subscriptions/subscription-manager/styles.scss
@@ -4,6 +4,7 @@
 
 .reader-subscription-manager.main {
 	max-width: 1168px;
+	min-height: 100vh;
 	margin: 0;
 	padding: 0 32px;
 
